<resources>

    <string name="app_name">LineGallery_001</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_exbition">ExbitionActivity</string>
    <string name="title">玉兰堂</string>
    <string name="artist">艺术家</string>
    <string name="shop">商店</string>
    <string name="share">分享</string>
    <string name="intr">介绍</string>
    <string name="exbition">展览</string>
    <string name="search">搜索</string>
    

</resources>